<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">Helsingør</string>
    <string name="date_text">15/06/2015</string>
    <string name="temperature">20°C</string>
    <string name="wind_speed">4.3 m/s</string>
    <string name="time_of_sunrise">04:12</string>
    <string name="time_of_sunset">22:01</string>
    <string name="rain_amount">3mm</string>
    <string name="pressure_amount">1022 hPa</string>
    <string name="humidity_amount">62%</string>
    <string name="sunrise_description">Sunrise Icon</string>
    <string name="sunset_description">Sunset Icon</string>
    <string name="wind_description">Wind Icon</string>
    <string name="real_time">20:22</string>
    <string name="settings_button_i">i</string>
    <string name="settings_button_x">x</string>
    <string name="rain_description">Rain Icon</string>
    <string name="pressure_description">Pressure Icon</string>
    <string name="humidity_description">Humidity Icon</string>
    <string name="temperature_description">Temperature Icon</string>
    <string name="text_example">Text example</string>
    <string name="day_day3">Wed</string>
    <string name="day_day1">Mon</string>
    <string name="date_day1">June 15</string>
    <string name="deg_day1">24° C</string>
    <string name="day_day2">Tue</string>
    <string name="date_day2">June 16</string>
    <string name="deg_day2">22° C</string>
    <string name="date_day3">June 17</string>
    <string name="day_day4">Thu</string>
    <string name="date_day4">June 18</string>
    <string name="deg_day4">23° C</string>
    <string name="day_day5">Fri</string>
    <string name="date_day5">June 19</string>
    <string name="deg_day5">24° C</string>
    <string name="wind_speed_day1">4.3 m/s</string>
    <string name="wind_speed_day2">4.7 m/s</string>
    <string name="wind_speed_day3">2.4 m/s</string>
    <string name="wind_speed_day4">1.7 m/s</string>
    <string name="wind_speed_day5">2.6 m/s</string>
    <string name="location_name">Placeholder</string>
    <string name="deg_day3">18°C</string>
    <string name="locations_title">Locations</string>
    <string name="manage_locations_button">Manage locations</string>
    <string name="imperial_radiobutton">Imperial</string>
    <string name="metric_radiobutton">Metric</string>
    <string name="unit_title">Unit</string>
    <string name="humidity_title">Humidity</string>
    <string name="rain_title">Rain</string>
    <string name="settings_title">Settings</string>
    <string name="pressure_title">Pressure</string>
    <string name="add_location">Add location</string>
    <string name="sunriseset_title">Sunrise and sunset</string>
    <string name="wind_speed_title">Windspeed</string>
    <string name="locations_settings_manage">Locations</string>
    <string name="add_location_show_location">Find location</string>
    <string name="city_name_input">Enter the name of the closest city/town:</string>
    <string name="country_name_input">Enter the name of the country:</string>
    <string name="delete_location">Delete</string>
    <string name="saved_location_example">Helsingør, Denmark</string>
    <string name="location_header_country">Enter the name of the country:</string>
    <string name="location_header_city">Enter the name of the closest city/town:</string>
    <string name="location_list_example">Helsingør, Denmark</string>
    <string name="city_country_example">Helsingør, Denmark</string>
    <string name="add_location_button">Add</string>
    <string name="country_denmark">Denmark</string>

    <string-array name="listdata">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>

    </string-array>


</resources>
