<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp" >

        <!-- DATE -->
        <!--<TextView-->
        <!--android:id="@+id/date_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/date_text"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

        <!-- MAIN WEATHER VISUALISATION / IMAGE -->
        <ImageView
            android:id="@+id/main_weather_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:color="#FFFFFF"
            android:src="@drawable/sun"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
        <!-- Temperature -->
        <TextView
            android:id="@+id/data_view_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="55sp"
            android:text="@string/temperature"
            android:textColor="#FFFFFF" />

        <!-- Temperature Icon -->
        <!--<ImageView-->
        <!--android:id="@+id/data_view_temperature_icon"-->
        <!--android:layout_width="18dp"-->
        <!--android:layout_height="38dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_toLeftOf="@id/data_view_temperature"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:src="@drawable/temperature"-->
        <!--android:contentDescription="@string/temperature_description" />-->

        <!-- CITY NAME -->
        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_below="@id/data_view_temperature"
            android:layout_alignParentRight="true" />

        <!-- COUNTRY NAME -->
        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Denmark"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_below="@id/city_name"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sub_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="10dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TableLayout
                android:id="@+id/overview_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:stretchColumns="1"
                android:layout_weight="0.5"
                android:paddingRight="10dp">
                <TableRow
                    android:id="@+id/overview_rain"
                    android:minHeight="60dp" >
                    <!-- Rain icon -->
                    <ImageView
                        android:id="@+id/data_view_rain_icon"
                        android:layout_gravity="center"
                        android:contentDescription="@string/rain_description"
                        android:src="@drawable/raindrop"
                        android:layout_width="match_parent" />
                    <!-- Rain -->
                    <TextView
                        android:id="@+id/data_view_rain"
                        android:textSize="20sp"
                        android:layout_gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/rain_amount"
                        android:textColor="#FFFFFF"/>
                </TableRow>

                <TableRow
                    android:id="@+id/overview_humidity"
                    android:minHeight="60dp" >
                    <!-- Humidity Icon -->
                    <ImageView
                        android:id="@+id/data_view_humidity_icon"
                        android:src="@drawable/humidity"
                        android:layout_gravity="center"
                        android:contentDescription="@string/humidity_description"/>
                    <!-- Humidity -->
                    <TextView
                        android:id="@+id/data_view_humidity"
                        android:textSize="20sp"
                        android:layout_gravity="center|left"
                        android:text="@string/humidity_amount"
                        android:paddingLeft="10dp"
                        android:textColor="#FFFFFF" />
                </TableRow>

                <TableRow
                    android:id="@+id/overview_pressure"
                    android:minHeight="60dp">
                    <!-- Pressure Icon -->
                    <ImageView
                        android:id="@+id/data_view_pressure_icon"
                        android:src="@drawable/pressure"
                        android:layout_gravity="center"
                        android:contentDescription="@string/pressure_description" />
                    <!-- Pressure -->
                    <TextView
                        android:id="@+id/data_view_pressure"
                        android:textSize="20sp"
                        android:layout_gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/pressure_amount"
                        android:textColor="#FFFFFF" />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:id="@+id/overview_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:stretchColumns="1"
                android:layout_weight="0.5"
                android:paddingLeft="10dp">
                <TableRow
                    android:id="@+id/overview_wind"
                    android:minHeight="60dp" >
                    <RelativeLayout
                        android:id="@+id/wind_overview"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="right"
                        android:layout_weight="1">
                        <!-- Wind flag icon -->
                        <ImageView
                            android:id="@+id/data_view_wind_icon"
                            android:contentDescription="@string/wind_description"
                            android:src="@drawable/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"/>
                        <!-- Wind direction icon -->
                        <ImageView
                            android:id="@+id/data_view_wind_direction_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/wind_description"
                            android:src="@drawable/wind_direction"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"/>
                        <TextView
                            android:id="@+id/data_view_wind"
                            android:textSize="15sp"
                            android:text="@string/wind_speed"
                            android:textColor="#FFFFFF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </TableRow>
                <TableRow
                    android:id="@+id/overview_sunriseset"
                    android:minHeight="60dp" >
                    <!-- Data View -->
                    <RelativeLayout
                        android:id="@+id/sunriseset_overview"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1">
                        <!-- Sunrise icon -->
                        <ImageView
                            android:id="@+id/data_view_sunrise_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sunrise"
                            android:contentDescription="@string/sunrise_description"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"/>
                        <!-- Sunrise -->
                        <TextView
                            android:id="@+id/data_view_sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/time_of_sunrise"
                            android:textColor="#FFFFFF"
                            android:layout_alignParentBottom="true"
                            android:layout_alignRight="@+id/data_view_sunrise_icon"
                            android:layout_alignEnd="@+id/data_view_sunrise_icon"/>

                        <!-- Sunset icon -->
                        <ImageView
                            android:id="@+id/data_view_sunset_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sunset"
                            android:contentDescription="@string/sunset_description"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="5dp"/>

                        <!-- Sunset -->
                        <TextView
                            android:id="@+id/data_view_sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/time_of_sunset"
                            android:textColor="#FFFFFF"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

